# OOP

./: README.md
10/: linkedlist.h  main.cpp  paper.cpp  paper.h  pen.cpp  pen.h  untitled.pro
11/: main.cpp  pen.cpp  stationery.h
6/: main.cpp  paper.cpp  paper.h  pen.cpp  pen.h  stationery.cpp  stationery.h  untitled.pro
7/: main.cpp  paper.cpp  paper.h  pen.cpp  pen.h  stationery.h  untitled.pro
8/: main.cpp  paper.h  pen.cpp  pen.h  stationery.h
9/: main.cpp  pen.h  stationery.cpp
PasswordApp/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  main.cpp
PasswordApp/DAL/: AuthDAL.cpp  AuthDAL.h  AuthDALInterface.h
PasswordApp/Entity/: UserEntity.cpp  UserEntity.h
PasswordApp/Exceptions/: BadRequest.h  UserNotFound.h
PasswordApp/Services/: AuthService.cpp  AuthService.h  AuthServiceInterface.h
PasswordApp/Utils/: DatabaseManager.cpp  DatabaseManager.h  Logger.cpp  Logger.h
PasswordApp/Views/: Clients.cpp  DashboardWindow.cpp  DashboardWindow.h  DashboardWindow.ui  clients.h  clients.ui  tourbook.cpp  tourbook.h  tourbook.ui
